--- a/captioner/app/src/main/res/layout/activity_main.xml
+++ b/captioner/app/src/main/res/layout/activity_main.xml
@@ -1,31 +1,25 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.ImageCaptioning.MainActivity"
-    android:weightSum="1"
     android:orientation="vertical"
     android:layout_height="match_parent"
-    android:background="@drawable/images"
     >
 
-    <Button
-        android:id="@+id/id_btnSelect"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        style="@android:style/Widget.Button.Small"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:textAppearance="@android:style/TextAppearance.DeviceDefault.DialogWindowTitle"
-        android:visibility="visible"
-        android:elevation="0dp"
-        android:background="@android:drawable/ic_menu_gallery"
+    <FrameLayout
+        android:id="@+id/camera_preview"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         />
 
-    <Button
+    <!--<ImageView
+        android:id="@+id/ivCaptured"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:visibility="invisible" />-->
+
+
+    <!--<Button
         android:id="@+id/id_btnCamera"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -35,41 +29,65 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:background="@android:drawable/ic_menu_camera"
-        android:textAppearance="@android:style/TextAppearance.DeviceDefault.DialogWindowTitle" />
+        android:textAppearance="@android:style/TextAppearance.DeviceDefault.DialogWindowTitle" />-->
+
+
+    <Button
+        android:id="@+id/id_btnSelect"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:visibility="visible"
+        android:elevation="0dp"
+        android:background="@drawable/ic_photo_white_24dp"
+        android:layout_gravity="center"
+        android:layout_marginBottom="@dimen/activity_vertical_margin"
+        />
+
+    <Button
+        android:id="@+id/id_btnRepeat"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:background="@drawable/ic_chevron_left_white_24dp"
+        android:layout_gravity="center"
+        android:visibility="invisible"
+        android:layout_marginBottom="@dimen/activity_vertical_margin"
+        />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/tvlabel"
-        android:textColor="@android:color/holo_red_light"
+        android:textColor="@android:color/white"
+        android:background="@android:color/black"
         android:fontFamily="serif"
         android:textStyle="normal|italic"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:gravity="center"
+        android:padding="5dp"
+        android:layout_above="@+id/id_btnSpeak"
+        android:visibility="invisible"/>
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/id_btnSpeak"
-        android:background="@android:drawable/ic_lock_silent_mode_off"
+        android:background="@drawable/ic_volume_up_white_24dp"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="@dimen/activity_vertical_margin"
+        android:visibility="invisible"/>
 
-    <ImageView
-        android:id="@+id/ivCaptured"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center_horizontal"
-        android:maxHeight="256dp"
-        android:maxWidth="256dp"
-        android:minHeight="100dp"
-        android:minWidth="100dp"
-        android:scaleType="centerInside"
-        android:fadingEdge="horizontal|vertical"
-        android:layout_alignStart="@+id/tvlabel"
-        android:layout_above="@+id/id_btnSelect"
-        android:layout_below="@+id/tvlabel"
-        android:adjustViewBounds="false"
-        tools:visibility="visible" />
+    <Button
+        android:id="@+id/button_capture"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/ic_panorama_fish_eye_white_36dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="@dimen/activity_vertical_margin"
+        />
 
 </RelativeLayout>
